--- a/app/views/components/lolita/menu_items/_subtree.html.haml
+++ b/app/views/components/lolita/menu_items/_subtree.html.haml
@@ -1,2 +1,2 @@
 - item.children.each do |child_item|
-  = render_component "lolita/menu_items", "row", :item=>child_item
+  = render_component "lolita/menu_items", "row", :item => child_item, :menu => menu
