assets locations fixed

--- a/app/views/components/lolita/menu_items/_row.html.haml
+++ b/app/views/components/lolita/menu_items/_row.html.haml
@@ -10,8 +10,8 @@
              :"data-id"=>item.id,:"data-url"=>menu_item_path(item.id),
             }
     %span
-      = image_tag("lolita-menu/move.png",:style=>"cursor:move;")
+      = image_tag("lolita/menu/move.png",:style=>"cursor:move;")
     %span
-      = image_tag("lolita-menu/delete.png", :"data-url" => menu_item_path(item.id), :class => "delete-menu-item", :"data-row" => "#item-#{item.id}", :"data-menu" => "#menu_tree_#{menu.id}")
+      = image_tag("lolita/menu/delete.png", :"data-url" => menu_item_path(item.id), :class => "delete-menu-item", :"data-row" => "#item-#{item.id}", :"data-menu" => "#menu_tree_#{menu.id}")
   %ol
     = render_component "lolita/menu_items", "subtree", :item => item, :menu => menu
