--- a/app/views/components/lolita/menu/_list.html.haml
+++ b/app/views/components/lolita/menu/_list.html.haml
@@ -1,7 +1,7 @@
 - content_for :script do
   = javascript_include_tag "lolita/menu/application.js"
 - content_for :style do
-  = stylesheet_link_tag "lolita/menu/style.css"
+  = stylesheet_link_tag "lolita/menu/application.css"
 .box
   = render_component list, :title
   = render_component list, :new_resource
