--- a/app/views/components/lolita/menu/nested_tree/_columns_body.html.haml
+++ b/app/views/components/lolita/menu/nested_tree/_columns_body.html.haml
@@ -5,6 +5,6 @@
         %td
           = column.formatter.with(record.send(column.name.to_sym),record).to_s
       = render_component columns,:last,:record=>record
-    %tr{:id=>"menu_items_#{record.id}",:class=>"subrow", :style=>"display:none;"}
+    %tr{:id=>"branch_#{record.id}",:class=>"subrow", :style=>"display:none;"}
       %td{:colspan=>columns.size+2}
-        = render_component "lolita/menu_items",:display, :menu=>record
+        = render_component "lolita/menu/nested_tree/branch_builder",:display, :scope => record
