component paths fixe

--- a/app/views/components/lolita/menu/nested_tree/_columns.html.haml
+++ b/app/views/components/lolita/menu/nested_tree/_columns.html.haml
@@ -1,2 +1,2 @@
-= render_component columns,:header
+= render_component *columns.build("header")
 = render_component "lolita/menu/nested_tree", "columns_body", :columns=>columns,:page=>page
